[package]
name        = "syscare"
version     = "1.0.0-dev"
edition     = "2021"
authors     = ["renoseven <dev@renoseven.net>"]
description = "Syscare command line interface"
license     = "MulanPSL-2.0"
build       = "build.rs"

[dependencies]
lazy_static = { version = "1.4.0" }
libc        = { version = "0.2.139" }
log         = { version = "0.4.17" }
clap        = { version = "4.0.13", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
bincode     = { version = "1.3.3" }
