[package]
name         = "upatchd"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare upatch daemon"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common     = { package = "syscare-common", path = "../../common" }
anyhow             = { version = "1.0" }
once_cell          = { version = "1.18" }
signal-hook        = { version = "0.3" }
lazy_static        = { version = "1.0" }
parking_lot        = { version = "0.11" }
indexmap           = { version = "1.9" }
log                = { version = "0.4" }
flexi_logger       = { version = "0.24", features = ["compress"] }
daemonize          = { version = "0.5" }
clap               = { version = "3.2", features = ["cargo", "derive"] }
serde              = { version = "1.0", features = ["derive"] }
serde_yaml         = { version = "0.8" }
jsonrpc-core       = { version = "18.0" }
jsonrpc-derive     = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }

[build-dependencies]
cc = { version = "1.0" }
