[package]
name         = "upatchd"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare upatch daemon"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.51"
build        = "build.rs"

[dependencies]
syscare-common     = { package = "syscare-common", path = "../../common" }
anyhow             = { version = "1.0" }
once_cell          = { version = "1.14" }
signal-hook        = { version = "0.3" }
lazy_static        = { version = "1.0" }
parking_lot        = { version = "0.10" }
indexmap           = { version = "1.8" }
log                = { version = "0.4" }
time               = { version = "0.3" }
flexi_logger       = { version = "0.21", features = ["compress"] }
daemonize          = { version = "0.5" }
clap               = { version = "2.34" }
serde              = { version = "1.0", features = ["derive"] }
serde_yaml         = { version = "0.7" }
jsonrpc-core       = { version = "15.1" }
jsonrpc-derive     = { version = "15.1" }
jsonrpc-ipc-server = { version = "15.1" }
